--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": ">=20 <=22"
+    "node": ">=22"
   },
   "scripts": {
     "dev": "next dev",
@@ -14,17 +14,46 @@
     "prisma:migrate": "prisma migrate dev"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@prisma/adapter-pg": "^7.0.1",
     "@prisma/client": "^7.0.1",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toggle": "^1.1.10",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@types/pdfkit": "^0.17.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.25",
     "jose": "^6.1.3",
+    "lucide-react": "^0.555.0",
+    "motion": "^12.23.25",
     "next": "14.2.5",
+    "next-themes": "^0.4.6",
     "pdfkit": "^0.17.2",
     "pg": "^8.16.3",
     "prisma": "^7.0.1",
+    "re-resizable": "^6.11.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-day-picker": "^9.11.3",
+    "react-dom": "^18",
+    "react-hook-form": "^7.67.0",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@types/node": "^20",
