--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint .",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
-    "@prisma/adapter-pg": "^7.0.1",
-    "@prisma/client": "^7.0.1",
+    "@prisma/adapter-pg": "^7.1.0",
+    "@prisma/client": "^7.1.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -38,32 +38,34 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.25",
     "jose": "^6.1.3",
-    "lucide-react": "^0.555.0",
+    "lucide-react": "^0.556.0",
     "motion": "^12.23.25",
-    "next": "14.2.5",
+    "next": "16.0.7",
     "next-themes": "^0.4.6",
     "pdfkit": "^0.17.2",
     "pg": "^8.16.3",
-    "prisma": "^7.0.1",
+    "prisma": "^7.1.0",
     "re-resizable": "^6.11.2",
-    "react": "^18",
+    "react": "^19.2.1",
     "react-day-picker": "^9.11.3",
-    "react-dom": "^18",
-    "react-hook-form": "^7.67.0",
+    "react-dom": "^19",
+    "react-hook-form": "^7.68.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss-animate": "^1.0.7",
     "zod": "^4.1.13"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@tailwindcss/postcss": "^4.1.17",
+    "@types/node": "^24",
     "@types/pg": "^8.15.6",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "^16.0.7",
+    "postcss": "^8.5.6",
+    "prettier": "^3.7.4",
+    "tailwindcss": "^4.1.17",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
