otimização das configurações de usuário

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://bagunca:senha@db:5432/bagunca?schema=public"
+DATABASE_URL="postgresql://clips:senha@db:5432/clips?schema=public"
 ADMIN_USERNAME="admin"
 ADMIN_PASSWORD="admin"
 SESSION_SECRET="secret"
