melhoria de escrita e organização de código

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,8 @@ ADMIN_USERNAME="admin"
 ADMIN_PASSWORD="admin"
 SESSION_SECRET="secret"
 REPORT_START_TIME="14:00"
+
+# Docker Database Configuration
+POSTGRES_USER=clips
+POSTGRES_PASSWORD=senha-segura
+POSTGRES_DB=clips
